--- a/Carousel.css
+++ b/Carousel.css
@@ -8,7 +8,7 @@
     padding-bottom: 5%;
     margin-right: 7%;
     overflow-x:scroll;
-    overflow-y:hidden;
+
 }
 .carousel_container::-webkit-scrollbar-track {
     border: 1px solid #000;
@@ -25,8 +25,16 @@
     background-color: #94CAD2;
     border: 1px solid #000;
 }
+.carousel_container::-webkit-scrollbar-thumb:hover {
+    
+    border-radius: 10px;
+    background-color: #94CAD2;
+    border: 1px solid #ffffff;
+    cursor: pointer;
+}
   
 .carousel_box{
+    margin-top: 3%;
     display: flex;
     flex-direction: column;
     height: 450px;
@@ -34,12 +42,13 @@
     border-radius: 14px;
 
     cursor: pointer;
-    box-shadow: 0 0 3px #a7a7a7;
+    box-shadow: 0 0 5px var(--ACCENT);
     background: #323D48;
+    
 }
 .carousel_box:hover{
-    box-shadow: 0 0 5px white;
-    
+    box-shadow: 0 0 10px white;
+    transform: translateY(-5%);
 }
 .carousel_img{
     display: block;
