--- a/Styles.css
+++ b/Styles.css
@@ -5,10 +5,10 @@
 }
 
 body{
-    
     background:  #262829;
     font-family: "Sora", sans-serif;
     overflow-x: hidden;
+    margin: 0px;
 }
 a{
     color: inherit;
@@ -118,12 +118,14 @@ a{
     font-weight: 600;
 }
 .background_img{
-    width: 1100px;
-    height: 700px;
+    width: auto;
+    height: 90vh;
     margin-left: 30%;
     background:
-    linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0) 50%), 
-    url(Sources/IMG_0614\ 1.png);
+    linear-gradient(to right, rgba(0, 0, 0, .8) 0%, rgba(0, 0, 0, 0) 100%),
+    linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0) 30%), 
+    url(Sources/BackgroundPC.jpeg);
+    filter: grayscale(75%) ;
     background-size: cover;
     mix-blend-mode: lighten;
     overflow:visible;
