--- a/Styles.css
+++ b/Styles.css
@@ -2,6 +2,7 @@
     --LIGHT-GRAY: #D9D9D9;
     --Mint: #C3E1AC;
     --ACCENT: #94CAD2;
+    --Soul: #46d2af;
 }
 
 body{
@@ -19,7 +20,7 @@ a{
     display: flex;
     justify-content: space-between;
     align-items: center;
-
+    z-index: 1;
     position:absolute;
     width: 90%;
     margin-left: 4%;
@@ -203,6 +204,12 @@ a{
     padding: 5px;
     transform: rotate(45deg);
 
+}
+
+.sub_Header{
+    display: flex; 
+    flex-direction: row; 
+    justify-content: center;
 }
 
 .skill_container{
