--- a/Styles.css
+++ b/Styles.css
@@ -30,7 +30,7 @@ a{
     padding-right: 1%;
     border-radius: 20px;
     border: 1px solid rgba(129, 133, 157, 0.6); 
-    background: grergba(50,61,72,0.6);
+    background: rgba(50,61,72,0.6);
     
 }
 .language{
