--- a/Styles.css
+++ b/Styles.css
@@ -2,14 +2,18 @@
     --LIGHT-GRAY: #D9D9D9;
     --Mint: #C3E1AC;
     --ACCENT: #94CAD2;
-    --Soul: #46d2af;
+    --Soul: #5fe4c3;
 }
 
 body{
     background:  #262829;
     font-family: "Sora", sans-serif;
     overflow-x: hidden;
-    margin: 0px;
+    margin: 0;
+    padding: 0;
+}
+*{
+    box-sizing: border-box;
 }
 a{
     color: inherit;
@@ -22,16 +26,14 @@ a{
     align-items: center;
     z-index: 1;
     position:absolute;
-    width: 90%;
-    margin-left: 4%;
-    top: 20px;
-    height: 90px;
-    padding-left: 1%;
-    padding-right: 1%;
-    border-radius: 20px;
-    border: 1px solid rgba(129, 133, 157, 0.6); 
-    background: rgba(50,61,72,0.6);
+    width: 100%;
+    top: 0;
+    padding: 1% 1% 1% 1%;
+    border-radius: 10px;
     
+    background:  
+    rgba(0, 0, 0, 0.1)
+    linear-gradient(to bottom, rgba(0, 0, 0,0.6), rgba(255, 255, 255,0));
 }
 .language{
     cursor: pointer;
@@ -72,7 +74,7 @@ a{
 }
 .font_header{
     color: #FFF;
-    font-size: 89px;
+    font-size: 5rem;
     font-weight: 600;
     margin-bottom: 0;
     margin-top: 0;
@@ -80,14 +82,14 @@ a{
 .font_subHead{
     margin-top: 5px;
     margin-left: 5px;
-    color: #94CAD2;
-    font-size: 20px;
+    color: var(--ACCENT);
+    font-size: 1.5rem;
     font-weight: 600;
 }
 .font_Quote{
     margin-left: 5px;
     color: #FFF;
-    font-size: 21px;
+    font-size: 1.5rem;
     font-weight: 400;
     width: 650px;
 }
@@ -123,10 +125,9 @@ a{
     height: 90vh;
     margin-left: 30%;
     background:
-    linear-gradient(to right, rgba(0, 0, 0, .8) 0%, rgba(0, 0, 0, 0) 100%),
-    linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0) 30%), 
+    linear-gradient(to right, rgba(0, 0, 0, .9) 0%, rgba(0, 0, 0, 0) 75%),
+    linear-gradient(to bottom, rgba(0, 0, 0, .8), rgba(0, 0, 0, 0) 25%), 
     url(Sources/BackgroundPC.jpeg);
-    filter: grayscale(75%) ;
     background-size: cover;
     mix-blend-mode: lighten;
     overflow:visible;
@@ -138,21 +139,27 @@ a{
 
 }
 .top_pill{
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+
     display: flex;
     justify-content: space-around;
-    width: 700px;
+    width: 40%;
     height: 60px;
     border-radius: 40px;
-    margin-right: 10%;
     background: rgba(217,217,217,.2);
     color: #FEFEFF;
     font-size: 20px;
+    
 }
 .pages{  
     margin-top: 20px;
+    cursor: pointer;
 }
 .pages:hover{
     color: var(--ACCENT);
+    transform: scale(110%);
 }
 
 .contact_pill{
@@ -170,21 +177,22 @@ a{
     /* Style */
     border-radius: 40px;
     box-shadow: 0px 0px 20px 0px var(--Mint);
-    outline: 3px solid var(--Mint);
+    border: 3px solid var(--Mint);
     font-size: 20px;
     text-wrap:nowrap;
     line-height: 30px;
     color: white;
+    cursor: pointer;
 }
 
 .contact_pill:hover{
     background:  var(--Mint);
     color: black;
-    font-weight: 600;
 }
 .button_down{
     cursor: pointer;
-    background: var(--Mint);
+    box-shadow: 0px 0px 10px 0px white;
+
     width: 57px;
     height: 57px;
     opacity: 0.9;
@@ -194,7 +202,7 @@ a{
 }
 .button_down:hover{
     border: 3px solid white;
-    box-shadow: 0px 0px 5px 0px white;
+    box-shadow: 0px 0px 20px 0px var(--Mint);
 }
 
 .arrow{
