--- a/Media.css
+++ b/Media.css
@@ -146,8 +146,8 @@
         overflow: hidden;
     }.carousel_icons{
     
-        max-width:  auto;
-        max-height: 20px;
+        max-width:  30px;
+        min-height: 20px;
         margin-bottom: 1%;
     }
     .carousel_title{
@@ -159,6 +159,7 @@
     }
     .carousel_desc{
         width: auto;
+        height: 45px;
         margin-left: 5%;
         margin-bottom: 5%;
         color: #FEFEFF;
@@ -168,7 +169,9 @@
     }
     .carousel_icon_container{
         display: flex;
-        margin-left: 10%;
-        gap: 20px;
+
+        margin-left: 5%;
+        margin-right: 5%;
+        gap: 10px;
     }
 }
