--- a/Pages/Styles/SoulHarbinger.css
+++ b/Pages/Styles/SoulHarbinger.css
@@ -2,7 +2,7 @@
 .thumbnail_Container{
     position: relative;
     width: 100%;
-    height: 30vh;
+    height: 25vh;
     display: flex;
     margin: auto;
     align-items: center;
@@ -50,3 +50,24 @@
       text-shadow: 3px 3px 5px rgb(0, 0, 0);
       pointer-events: none;
   }
+
+/***************************Header 1***********************************/
+
+.block_one{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 15%;
+    margin-right: 15%;
+    margin-top: 10%;
+    color: white;
+    background: url(/SourcesWeb/Soul/UnityGame1.PNG);
+    text-align: center;
+    backdrop-filter: blur(3px);
+    z-index: -1;
+    height: 75vh;
+}
+.block_one div{
+    z-index: 1;
+    filter: none;
+}
