--- a/Carousel.css
+++ b/Carousel.css
@@ -5,14 +5,56 @@
     gap: 5%;
     width: 80%;
     margin: 0 auto;
+    justify-items: center;
+    padding-bottom: 5%;
 }
-  
+ .ribbon{
+    position: absolute;
+    top: 5%;    
+    color: white;
+    text-shadow: 0 0 2px black;
+    padding: 2% 14%;
+    font-weight: bold;
+    font-size: 14px;
+    transform: rotate(45deg);
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+ } 
+ .date{
+    position: absolute;  
+    
+    color: white;
+    text-shadow: 0 0 2px black;
+    padding:1% 5%;
+    font-weight: bold;
+    font-size: 12px;
+
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+    top: 97%;
+    left: 50%;
+    transform: translate(-50%, -50%); 
+ }
+
+.wip{
+    background: var(--ACCENT);
+    left: 70%;
+
+}
+.done{
+    background: var(--Mint);
+    left: 70%;
+}
+.halt{
+    background: plum;
+    left: 65%;
+}
+
+
 .carousel_box{
     margin-top: 3%;
     display: flex;
     flex-direction: column;
 
-    width: 40vh;
+    width: 35vh;
     height: 40vh;
     border-radius: 15px;
 
@@ -22,6 +64,7 @@
     
     transition: transform 0.3s ease-in-out;
     will-change: transform;
+    overflow:hidden;
 }
 .carousel_box:hover{
    
@@ -34,10 +77,7 @@
     overflow: hidden;
 }
 .carousel_icons{  
-    max-width:  auto;
-    max-height: 50px;
-    min-height: 50px;
-    margin-bottom: 5%;
+    height: 45px;
 }
 .carousel_title{
     color: #FEFEFF;
@@ -47,17 +87,19 @@
     margin-bottom: 0;
 }
 .carousel_desc{
-
+    
     padding-left: 5%;
     padding-right: 5%;
     margin-bottom: 10%;
     color: #FEFEFF;
     font-size: 16px;
     font-weight: 400;
-
+    height: 15%;
 }
 .carousel_icon_container{
     display: flex;
-    margin-left: 10%;
-    gap: 30px;
+    margin-left: 5%;
+    margin-right: 5%;
+    gap: 10%;
+    
 }
