--- a/Media.css
+++ b/Media.css
@@ -6,13 +6,12 @@
         flex-direction: column;
         align-items: center;
         position:absolute;
-        width: 90%;
-        top: 20px;
-        height: 150px;
-        border-radius: 70px;
-        border: none;
-        margin-left: 5%;
-        background: none;
+        padding-top: 2%;
+        height: 10%;
+
+        background:  
+        rgba(0, 0, 0, 0.1)
+        linear-gradient(to bottom, rgba(0, 0, 0,0.6), rgba(255, 255, 255,0));
     }
     .button_down{
         display: none;
@@ -29,26 +28,7 @@
         display: none;
     
     }
-    .contact_pill{
-        display: none;
-    }
-    .top_pill{
-        display: flex;
-        justify-content: space-evenly;
-      
-        margin-top: 15px;
-        width: 100%;
-        height: 60px;
-        border-radius: 40px;
-        
-        background: rgba(217,217,217,.2);
-        color: white;
-        font-size: 20px;
-    }
-
-    .theme_pill{
-        display: none;
-    }
+   
 
     .message_code{
        display: none;
@@ -59,7 +39,7 @@
         width: auto;
         align-items: center;
         flex-direction: column;
-        margin-top: 35%;
+        margin-top: 15%;
         text-align: center;
         height: 10%;
     }
@@ -74,7 +54,7 @@
         width: auto;
     }
     .font_Quote{
-        width: auto;
+        width: 75%;
     }
     .skill_container{
         row-gap: 10px;
@@ -130,13 +110,9 @@
         width: 80%;
     }
     .carousel_container{
-        gap: 50px;
+        gap: 3%;
     }
-    .carousel_box{
-        height: 250px;
-        width: auto;
 
-    }
     .carousel_img{
         display: block;
         min-height: 100px;
@@ -145,10 +121,7 @@
         border-radius: 14px;
         overflow: hidden;
     }.carousel_icons{
-    
-        max-width:  30px;
-        min-height: 20px;
-        margin-bottom: 1%;
+        height: 50px;
     }
     .carousel_title{
         color: #FEFEFF;
@@ -166,12 +139,11 @@
         font-size: 12px;
         font-weight: 400;
     
-    }
+    } 
     .carousel_icon_container{
         display: flex;
-
         margin-left: 5%;
         margin-right: 5%;
-        gap: 10px;
+        gap: 10%;
     }
 }
