--- a/Pages/Styles/Csgo.css
+++ b/Pages/Styles/Csgo.css
@@ -25,7 +25,7 @@
 
 .image_Title {
     position: relative;
-      color: rgb(157, 37, 37);
+      color: white;
       font-family: 'Grechen Fuemen', sans-serif;
       font-size: 100px;
       font-weight: bold;
@@ -38,13 +38,12 @@
   flex-direction: row;
   width: 100%;
   justify-content: space-around;
-  background: rgb(31, 32, 32);
   padding-bottom: 30px;
 }
 .project_Title{ 
   margin-left: 50px;
   display: flex;
-  color: rgb(157, 37, 37);
+  color: white;
   font-family: 'Grechen Fuemen', sans-serif;
   font-size: 50px;
   text-shadow: 3px 3px 5px rgba(0, 0, 0, 1);
@@ -60,8 +59,8 @@
   font-size: 22px;
   line-height: 1.8;
   font-weight: 400;
-  text-shadow: 3px 3px 5px #4a2020;
-  color: rgb(176, 155, 155);
+  text-shadow: 3px 3px 5px #000000;
+  color: wheat;
 }
 .project_Video{
   margin-top: 125px;
@@ -72,7 +71,7 @@
   height: 400px;
   cursor: pointer;
   border: none;
-  box-shadow: 0 0 5px #521010;  
+  box-shadow: 0 0 5px #ffffff;  
 }
 
 .project_container_2{
@@ -82,18 +81,11 @@
   width: 100%;
   justify-content: space-around;
 }
-.project_Image{
- margin-top: 100px;
-}
-.project_Image img{
-    width: 700px;
-    height: auto;
-    box-shadow: 0 0 5px #521010;
-}
+
 .project_Title_2{
     
 display: flex;
-color: rgb(157, 37, 37);
+color: rgb(255, 255, 255);
 font-family: 'Grechen Fuemen', sans-serif;
 text-shadow: 3px 3px 5px rgba(0, 0, 0, 1);
 font-size: 50px;
