--- a/Styles.css
+++ b/Styles.css
@@ -23,84 +23,53 @@ a{
 ::-webkit-scrollbar{
     display: none;
 }
-.navbar{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 1;
-    position:absolute;
-    width: 100%;
-    top: 0;
-    padding: 1% 1% 1% 1%;
-    
-    background:  
-    rgba(0, 0, 0, 0.1)
-    linear-gradient(to bottom, rgba(0, 0, 0,0.6), rgba(255, 255, 255,0));
-}
-.nav_right{
-    display: flex;
-    padding-right: 3%;
-}
-.about_pill{
-   /* Flex */
-   display: flex;
-   justify-content: center;
-   align-items: center;
 
-   /* Layout */
-   padding-left: 5%;
-   padding-right: 5%;
-   margin-right: 5%;
-   height: 50px;
-   width: auto;
-   /* Style */
-   border-radius: 40px;
-   box-shadow: 0px 0px 10px 0px var(--ACCENT);
-   border: 3px solid var(--ACCENT);
-   font-size: 20px;
-   text-wrap:nowrap;
-   line-height: 30px;
-   color: white;
-   cursor: pointer;
-    
-}
-.about_pill:hover{
-    background:  var(--ACCENT);
-    color: black;
-}
-.contact_pill{
+
+.link_pill{
     /* Flex */
     display: flex;
     justify-content: center;
     align-items: center;
 
     /* Layout */
+    margin-top: 2%;
     padding-left: 5%;
     padding-right: 5%;
     height: 50px;
-    width: auto;
+    width: 30%;
     /* Style */
     border-radius: 40px;
-    box-shadow: 0px 0px 10px 0px var(--Mint);
-    border: 3px solid var(--Mint);
     font-size: 20px;
     text-wrap:nowrap;
     line-height: 30px;
     color: white;
     cursor: pointer;
 }
-
-.contact_pill:hover{
+.link_pill:nth-of-type(1){
+    border: 3px solid var(--ACCENT);
+    box-shadow: 0 0 5px var(--ACCENT);
+}
+.link_pill:nth-of-type(2){
+    margin-left: 5%;
+    border: 3px solid var(--Mint);
+    box-shadow: 0 0 5px var(--Mint);
+}
+.link_pill:nth-of-type(1):hover{
+    background:  var(--ACCENT);
+    
+}
+.link_pill:nth-of-type(2):hover{
     background:  var(--Mint);
-    color: black;
+ 
 }
 
+
 .header{
-    pointer-events: none;
+
     position: absolute;
     display: flex;
     flex-direction: column;
-    top: 200px;
+    top: 10%;
     left: 15%;
 }
 .message_code{
@@ -153,23 +122,14 @@ a{
     size: 20px;
     font-weight: 400;
 }
-.name{  
-    /* Style */
-    cursor: pointer;
-    color: #FEFEFF;
-    font-size: 36px;
-    font-weight: 600;
-}
-.name:hover{
-   text-shadow: 0 0 5px wheat;
-}
+
 .background_img{
     width: auto;
     height: 90dvh;
     margin-left: 30%;
     background:
-    linear-gradient(to right, rgba(0, 0, 0, .9) 0%, rgba(0, 0, 0, 0) 75%),
-    linear-gradient(to bottom, rgba(0, 0, 0, .8), rgba(0, 0, 0, 0) 25%), 
+    linear-gradient(to right, rgba(0, 0, 0, .9) 0%, rgba(0, 0, 0, 0) 80%),
+    linear-gradient(to bottom, rgba(0, 0, 0, .9), rgba(0, 0, 0, 0) 25%), 
     url(Sources/BackgroundPC.jpeg);
     background-size: cover;
     mix-blend-mode: lighten;
@@ -184,22 +144,23 @@ a{
 
 .button_down{
     cursor: pointer;
-    box-shadow: 0px 0px 10px 0px white;
-
+    box-shadow: 0 0 5px white;
+    border: 3px solid white;
     width: 57px;
     height: 57px;
     opacity: 0.9;
     border-radius: 50%;
     top: 75%;
-    border: none;
+    background: none;
 }
 .button_down:hover{
-    border: 3px solid white;
-    box-shadow: 0px 0px 20px 0px plum;
+    box-shadow: 0 0 5px plum;
+    border: 3px solid plum;
+    
 }
 
 .arrow{
-    border: solid black;
+    border: solid white;
     border-width: 0 3px 3px 0;
     display: inline-block;
     padding: 5px;
