--- a/Carousel.css
+++ b/Carousel.css
@@ -8,7 +8,20 @@
     justify-items: center;
     padding-bottom: 5%;
 }
+.title{
+    position: absolute;  
+    
+    color: white;
+    text-shadow: 0 0 2px black;
+    padding:1% 5%;
+    font-weight: bold;
+    font-size: 12px;
 
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+    top: 97%;
+    left: 50%;
+    transform: translate(-50%, -50%); 
+ }
  .date{
     position: absolute;  
     
