--- a/Carousel.css
+++ b/Carousel.css
@@ -36,7 +36,21 @@
     left: 50%;
     transform: translate(-50%, -50%); 
  }
-
+.project_title{
+    position: absolute;  
+    
+    color: white;
+    text-shadow: 0 0 2px black;
+    padding:1% 5%;
+    font-weight: bold;
+    font-size: 16px;
+    border-radius: 5%;
+    background-color: rgba(0, 0, 0, 0.283);
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.5);
+    bottom: 97%;
+    left: 50%;
+    transform: translate(-50%, 50%); 
+}
 
 .carousel_box{
     margin-top: 3%;
@@ -76,7 +90,7 @@
     margin-bottom: 0;
 }
 .carousel_desc{
-    
+    text-align: center;
     padding-left: 5%;
     padding-right: 5%;
     margin-bottom: 10%;
