--- a/Pages/Styles/About.css
+++ b/Pages/Styles/About.css
@@ -21,8 +21,8 @@ body{
 .bio_container{
     display: flex;
     justify-content: space-around;
-
-    margin-top: 10%;
+    
+    margin-top: 5%;
 }
 .bio{
     color: white;
@@ -44,6 +44,7 @@ body{
 }
 
 .udemy{
+
     height: 300px;
     width: 400px;
     border-radius: 10%;
@@ -52,6 +53,11 @@ body{
 }
 .udemy img{
     max-width: 100%;
+}
+.image_container{
+    margin-top: 3%;
+    margin-bottom: 3%;
+    display: flex; gap: 5%;
 }
 .image{
     height: 300px;
