--- a/Pages/Styles/Discord.css
+++ b/Pages/Styles/Discord.css
@@ -84,10 +84,11 @@
 }
 .project_Image{
  margin-top: 100px;
+
 }
 .project_Image img{
-    width: auto;
-    height: 75%;
+    width: 65vh;
+    height: auto;
     box-shadow: 0 0 5px #ffffff;
 }
 .project_Title_2{
