--- a/Styles.css
+++ b/Styles.css
@@ -7,7 +7,7 @@
 }
 
 body{
-    background:  #262829;
+    background:  rgb(30, 31, 32);
     font-family: "Sora", sans-serif;
     overflow-x: hidden;
     margin: 0;
@@ -41,7 +41,7 @@ a{
     border-radius: 40px;
     font-size: 1dvw; 
     text-wrap:nowrap;
-    line-height: 175%;
+    line-height: 250%;
     color: white;
     cursor: pointer;
 
@@ -128,11 +128,10 @@ a{
     background:
     linear-gradient(to right, rgba(0, 0, 0, .9) 0%, rgba(0, 0, 0, 0) 80%),
     linear-gradient(to bottom, rgba(0, 0, 0, .9), rgba(0, 0, 0, 0) 25%), 
+     linear-gradient(to top , rgba(0, 0, 0, .9) 0%, rgba(0, 0, 0, 0) 10%),
     url(Sources/BackgroundPC.jpeg);
     background-size:cover;
     mix-blend-mode: lighten;
-    
-    
 }
 .header{
     display: flex;
