--- a/Pages/Styles/Dodgeball.css
+++ b/Pages/Styles/Dodgeball.css
@@ -59,11 +59,23 @@
     border-radius: 10px;
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.8);
     overflow: hidden;
-    height: 150px;
-    width: 1000px;
+    height: 200px;
+    width: 900px;
     object-fit: fill;
 }
-
+.video_container{
+    display: flex;
+    justify-content: center;
+    margin-top: 3%;
+    margin-bottom: 3%;
+    display: flex; gap: 5%;
+}
+.video_container video{
+  width: 700px;
+  height: 400px;
+  cursor: none;
+  border: none; 
+}
 /* AUDIO */
 
 .audio-grid {
